src/style.css
body{
	margin: 0;
	height: 100vh;
	overflow: hidden;
	touch-action: none;
	font-family: lato, sans-serif;
	font-size: 10pt;
}

#section-selector-container:hover{
	opacity: 100%;
}


#section-selector-container{
	opacity: 40%;
	transition: opacity 0.3s;
	position: fixed;
	width: 70px;
	right: 0;
	height: 100%;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	gap: 20px 0;
}

.section-selector{
	width: 20px;
	height: 1px;
	border-radius: 50%;
	/*
	background-color: rgb(100,100,100);
	transition: background-color 0.5s;
	*/

}
.section-selector img{
	filter: drop-shadow(0 0 0px black) opacity(70%) hue-rotate(-70deg);
	transition: filter 0.5s;
}
.section-selector.selected img{
	filter: drop-shadow(0 0 1px black) opacity(100%) hue-rotate(0deg);
}

.section-selector.selected{
	/*
	background-color: rgb(255, 255, 255);
	*/
}

#sections-container{
	position: relative;
	overflow: hidden;
	height: 100%;
	width: 100vw;
	touch-action: none;
}

.spacer{
	position: relative;
	height: 600px;
	width: 100vw;
	z-index: 500;
	background-color: #335441;
}

.section{
	height: 100vh;
	width: 100vw;
	position: relative;
	display: flex;
	justify-content: center;
	align-items: center;
	overflow: hidden;
	touch-action: none;
}

.content-background{
	position: absolute;
	z-index: -500;
	width: 100%;
	height: 100%;
	top: 0;
	left: 0;
	background-image: "linear-gradient(0deg, hsl(181, 100%, 90%) 0%, hsl(200, 100%, 70%) 100%)"
}

.section-background{
	position: absolute;
	z-index: -1000;
	width: 100%;
	height: 100%;
	top: 0;
	left: 0;
	background-color: #335441;
}

.section-content{
	position: relative;
	height: min(100vw, 100vh);
	width: min(100vw, 100vh);
	margin: auto;
	text-align: center;
	/*
	display: flex;
	flex-direction: column;
	justify-content: flex-start;
	align-items: center;
	text-align: center;
	*/
	z-index: 200;
}

.section-content > *{
	margin: auto;
}

.section-content.background{
	z-index: -200;
}

.animation-layer{
	position: absolute;
	width: 100%;
	height: 100%;
	transform: scale(1.78);
	max-height: 1920px;
	max-width: 1920px;
	pointer-events: none;
	overflow: hidden;
}

.scroll-arrow{
	position: relative;
	margin-top: -20px;
	display: block;
	width: 100px;
}


/* mobile */
.block{
	margin-top: -50px;
	padding: 20px;
	max-width: 80%;
}

#section-0 .block.subtitle{
	margin-top: -60px;
}

/* not mobile */
@media screen and (min-width: 768px) {
	.block{
		margin: 0;
		padding: 60px 90px 0 90px;
	}

	#section-0 .block.title{
		margin: 0;
		padding: 90px 90px 0 90px;
	}
	#section-0 .block.subtitle{
		margin-top: -60px;
		padding: 0px 90px 0 90px;
	}
}

/* mobile */
#section-16 .block.subtitle{
	margin-top: -60px;
}

/* not mobile */
@media screen and (min-width: 768px) {
	#section-16 .block.subtitle{
		margin-top: -100px;
	}
}



#header{
	position: absolute;
	top: 0;
	width: 100%;
	background-color: #0a4f38;
	color: white;
	display: flex;
	justify-content: space-between;
	align-items: center;
}

#footer{
	position: absolute;
	bottom: 0;
	width: 100%;
	height: 50px;
	background-color: #1c2837;
	color: white;
	display: flex;
	justify-content: space-around;
	align-items: center;
}

@media (max-width:700px)  {
	#footer{
		font-size: 6pt;
	}
}

#footer a{
	color: white;
	padding: 3px;
	text-decoration: none;
}


#header a{
	color: white;
	padding: 3px;
	display: flex;
	align-items: center;
	justify-content: flex-start;
	text-decoration: none;
	text-transform: uppercase;
}

#header a img{
	height: 15px;
	padding: 10px;
}

.brand-strip{
	position: absolute;
	bottom: 0;
	right: 0;
	height: 100px;
}

.brand-strip-footer{
	/*display: none;*/
	position: absolute;
	z-index: 1000;
	bottom: 50px;
	right: 0;
	height: 100px;
}

.bushes{
	position: absolute;
	width: calc(min(1950px, calc(1.85 * 100vh)));
	height: 100vh;
	display: flex;
	justify-content: space-between;
	align-items: center;
	z-index: 800;
	pointer-events: none;
}

.bush{
	height: 100vh;
}

.front{
	z-index: 1000;
}

.texture-overlay{
	position: absolute;
	pointer-events: none;
	z-index: 1000;
	width: 100%;
	height: 100%;
	background-image: url("static_assets/overlay.jpg");
	mix-blend-mode: multiply;
	opacity: 15%;
}

.tp-button{
	display: flex;
	margin: 20px;
	justify-content: flex-start;
	align-items: center;
	border-radius: 100px;
	height: 60px;
	width: 250px;
	background-color: #faad00;
	color: #0a4f3b;
}

.tp-button-icon{
	height: calc(60px - 10px);
	width: calc(60px - 10px);
	margin: 5px;
	border-radius: 100px;
	text-decoration: none;
	display: flex;
	justify-content: center;
	align-items: center;
	flex-direction: column;
}

.tp-button-icon.white{
	background-color: white;
}

.tp-button-icon.transparent{
	background-color: none;
}

.tp-button-icon.green{
	background-color: #335441;
}

.icon-img{
	width: 100%;
	height: 100%;
}

div.tp-button-content{
	text-align: center;
	font-size: 12pt;
	flex: 2;
	text-decoration: none;
	/*text-transform: uppercase;*/
	font-family: lato, sans-serif;
	border: none;
}

